@@ -2,5 +2,6 @@
 // $Id$
 
 project {
-  libout = .
+  libout   = .
+  libpaths = .
 }
