@@ -1,3 +1,15 @@
+Tue Jun 14 07:15:09 2005  Chad Elliott  <elliott_c@ociweb.com>
+
+        * config/global.mpb:
+
+          Set libpaths to '.' since libout is set to '.' as well.
+
+        * modules/Creator.pm:
+        * modules/WorkspaceCreator.pm:
+
+          Corrected support for scoping and exclusion from within an
+          aggregated workspace.
+
 Fri Jun 10 06:36:02 2005  Chad Elliott  <elliott_c@ociweb.com>
 
         * USAGE:
